# simple_nav2

./: README.md
move_base/: CMakeLists.txt  package.xml  parc_culture  readme.md
move_base/launch/: localization_launch.py  nav2_solution_launch.py  rviz_launch.py  task_solution_launch.py
move_base/maps/: house.pgm
move_base/params/: global_planner.yaml  nav2_params.yaml  nodes_parameters.yaml
move_base/routes/: parc_robot  world
move_base/rviz/: move.rviz  nav2_default_view.rviz
move_base/src/: cancel_goal.cpp  convert_parc.cpp  convert_twist.cpp  distance.py  distance_parc_node.py  planner_client.cpp  pose_manage.py  server.cpp  teleop_keyboard.py  trajet_odom
move_nav2/: CMakeLists.txt  package.xml
move_nav2/labels/: label.txt  test.txt
move_nav2/launch/: nav2_solution_launch.py  rviz_launch.py  slam_launch.py
move_nav2/maps/: house.yaml
move_nav2/params/: controller.yaml  nav2_params.yaml
move_nav2/rviz/: nav2_default_view.rviz  test.txt
move_nav2/src/: followpath.cpp  label_point.py  planner_client.cpp
parc_culture/: CMakeLists.txt  package.xml
parc_culture/launch/: farm.launch.py  move_robot.launch.py
parc_culture/params/: nodes_parameters.yaml
parc_culture/routes/: parc_culture
parc_culture/rviz/: rviz_default.rviz
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/action/: MovePoint.action
tb3_gazebo/: CMakeLists.txt  package.xml
tb3_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
tb3_gazebo/models/turtlebot3_waffle/: model-1_4.sdf
tb3_gazebo/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
